# Boneparte

./: .cursorrules  .gitignore  AVP_FSM_INTEGRATION_SUMMARY.md  FSM_MERGE_FIX_SUMMARY.md  README.md  STATE_MACHINE_ANALYSIS.md  calibration_steps.md  my_changes.patch
docker/: Dockerfile  boneparte.sh  commands.bashrc  docker_build.sh  docker_run.sh  entrypoint.sh  shell.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/fri_client_sdk/share/fri_client_sdk/: package.sh
install/iiwa14_moveit_config/share/iiwa14_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/iiwa7_moveit_config/share/iiwa7_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/kuka_med_moveit_cpp/lib/kuka_med_moveit_cpp/: moveit_point_to_point.py
install/kuka_med_moveit_cpp/share/kuka_med_moveit_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lbr_bringup/share/lbr_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/lbr_description/share/lbr_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/lbr_fri_idl/share/lbr_fri_idl/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/lbr_fri_ros2/include/lbr_fri_ros2/: app.hpp  async_client.hpp  command_guard.hpp  control.hpp  filters.hpp  formatting.hpp  ft_estimator.hpp  kinematics.hpp  pinv.hpp  types.hpp  utils.hpp  worker.hpp
install/lbr_fri_ros2/share/lbr_fri_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/lbr_ros2_control/include/lbr_ros2_control/: system_interface.hpp  system_interface_type_values.hpp
install/lbr_ros2_control/share/lbr_ros2_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/med14_moveit_config/share/med14_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/med7_moveit_config/share/med7_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build  latest_list
src/: README.md  README_FVD.md  README_FVD_ENCORE.md  tcp_communication.md
src/integration/cam2base/: CMakeLists.txt  README.md  package.xml
src/integration/cam2base/launch/: cam_to_base_launch.py
src/integration/cam2base/src/: aruco_calibration_node.py  aruco_detection_node.py  aruco_drill_pose_publisher.py  aruco_tf_publisher.cpp  drill_pose_publisher.py  hand2eye_tf_publisher.cpp  pointcloud_base_publisher.py  pointcloud_shell_base_publisher.py
src/integration/launch_subsystems/: package.xml  setup.py
src/integration/launch_subsystems/launch/: launch_planning_hardware.py  planning_hardware.launch.py  planning_perception.launch.py
src/integration/serialcomms/: package.xml  setup.cfg  setup.py
src/integration/serialcomms/serialcomms/: write_to_serial.py
src/manipulation/: README.md  manipulation_subsystem.md
src/manipulation/joint_config_moveit_cpp/: CMakeLists.txt  package.xml
src/manipulation/kuka_control_test/: CMakeLists.txt  package.xml
src/manipulation/kuka_control_test/src/: moveit_test.cpp
src/manipulation/kuka_med_moveit_cpp/: CMakeLists.txt
src/manipulation/kuka_med_moveit_cpp/scripts/: moveit_point_to_point.py
src/manipulation/lbr_bringup/launch/: move_group.launch.py
src/manipulation/lbr_fri_ros2/: package.xml
src/manipulation/lbr_moveit_cpp/src/: hello_moveit.cpp
src/manipulation/med7_moveit_config/: .setup_assistant  package.xml
src/manipulation/med7_moveit_config/config/: initial_positions.yaml  kinematics.yaml  med7.srdf  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml
src/manipulation/med7_moveit_config/launch/: moveit_rviz.launch.py
src/manipulation/surgical_robot_planner/: CMakeLists.txt  package.xml
src/manipulation/surgical_robot_planner/launch/: drill_motion_executor.launch.py  error_recovery.launch.py  move_to_pose.launch.py
src/manipulation/surgical_robot_planner/msg/: PinDrilled.msg
src/manipulation/surgical_robot_planner/src/: drill_motion_executor.cpp  error_recovery_node.cpp  move_to_pose.cpp  obstacle_manager.cpp
src/manipulation/surgical_robot_planner/srv/: ClearObstacle.srv  RobotCommand.srv
src/perception/: .gitignore  README.md
src/perception/auto_reposition/: fvd_bone_codebook.json
src/perception/dinov3/: .gitignore  README.md  bone_codebook.pkl  docker_requirements.txt  hubconf.py
src/perception/parasight/: IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  STATE_MACHINE.md  STATE_MACHINE_DESIGN.md  SURGEON_WORKFLOW.md  host.py  setup.py
src/perception/parasight/launch/: rs_launch.py  segment_rs_launch.py
src/perception/parasight/parasight/: FSM_test.md  detect_bone_cluster_json.py  dino_bone_extract.py  host.py  host_state_machine.py  run_bone_segmentation_json.py  sam_to_segment.py  sam_ui.py  segment_ui.py  test_dino_bone_extract.py  utils.py
src/testing/: mock_avp_annotations.py  mock_unified_ros_server.py  test_avp_server.py  test_segmented_image_send.py  test_segmented_image_server.py  test_state_machine.sh
src/vision_pro/: ar_subsystem.md
src/vision_pro/ArucoTransform/: ArucoTCPClient.swift  BUILD_FIXES.md  IMPLEMENTATION_COMPLETE.md  QUICK_START.md  README.md  SETUP_GUIDE.md  WHATS_LEFT.md  generate_aruco_marker.py
src/vision_pro/SVD_ROS_Comms/: TCPClient.swift
src/vision_pro/TibiaTracking/: .gitignore
src/vision_pro/tcp_server_pkg/: package.xml  setup.cfg  setup.py
src/vision_pro/tcp_server_pkg/launch/: avp_server_launch.py
src/vision_pro/tcp_server_pkg/tcp_server_pkg/: avp_tcp_server.py  latency_metrics.npy  measure_latency.py  tcp_server_node.py
(+410 files in other folders)
