<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>cam2base</name>
    <version>0.0.1</version>
    <description>TODO: Package description</description>
    <maintainer email="venkata.surya@alumni.iiit.ac.in">sreeharshaparuchur1</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <exec_depend>rclcpp</exec_depend>
    <build_depend>tf2</build_depend>
    <exec_depend>tf2</exec_depend>
    <build_depend>tf2_ros</build_depend>
    <exec_depend>tf2_ros</exec_depend>
    <build_depend>geometry_msgs</build_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>
    <exec_depend>tf2_py</exec_depend>
    <exec_depend>pcl_msgs</exec_depend>
    <exec_depend>pcl_conversions</exec_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
        <ros2>
            <python>
                <executable>drill_pose_publisher.py</executable>
            </python>
            <python>
                <executable>pointcloud_base_publisher.py</executable>
                <executable>pointcloud_shell_base_publisher.py</executable>
            </python>
        </ros2>
    </export>

</package>
